--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ant-design/icons": "^6.0.0",
     "antd": "^5.26.0",
+    "axios": "^1.9.0",
     "dayjs": "^1.11.13",
     "react": "18.2.0",
     "react-dom": "18.2.0"
